--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,3 +10,13 @@
     margin: 0 auto;
   }
 }
+@media (min-width: 768px) {
+  .blog-wrapper {
+    position: relative;
+    width: 80%;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+}
